flickering side nav fix

--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -58,7 +58,6 @@ $toolbar-text-color: white;
 mat-sidenav-content {
     flex-grow: 1;
     background-color: $background-color;
-    padding: 20px;
     overflow: auto;
 }
 
